Corrected info box padding style

--- a/Services/src/main/resources/webutils/css/webutils.css
+++ b/Services/src/main/resources/webutils/css/webutils.css
@@ -134,6 +134,7 @@ body
 	margin-right: auto;
 	padding: 0.6em;
 	padding-right: 3em;
+	padding-left: 2em;
 	font: bold 12px "Times New Roman", Times, serif;
 	background-color: yellow;
 	color: black;
